Reset new_response_ when a headers phase transaction is restarted.

Bug: 745102
Change-Id: Iabf7a1a2dbe8ea53ec1616134b777f9bf576c704
Reviewed-on: https://chromium-review.googlesource.com/575679
Reviewed-by: Josh Karlin <jkarlin@chromium.org>
Commit-Queue: Shivani Sharma <shivanisha@chromium.org>
Cr-Commit-Position: refs/heads/master@{#487521}
Former-commit-id: 4deeee8b5da181a155750428bda8d90ed1bfdf22